# content_agent

./: .env  README.md  pyproject.toml  report.md
src/content_agent/: crew.py  main.py  report.md
src/content_agent/config/: agents.yaml  tasks.yaml
src/content_agent/tools/: perplexitysearch.py
